Ajout du dossier css ainsi que de la route

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="http://localhost:5000/public/css/style.css">
 </head>
 <body>
     <h1>HELLO WOLRD TOM</h1>
-    <img src="../images/image.jpg">
+    <img src="http://localhost:5000/public/images/image.jpg">
 </body>
 </html>
