Ajout du dossier javascripit ainsi que de la route

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,4 +11,5 @@
     <h1>HELLO WOLRD TOM</h1>
     <img src="http://localhost:5000/public/images/image.jpg">
 </body>
+<script type="text/javascript" src="http://localhost:5000/public/js/script.js"></script>
 </html>
